--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Proof Of Humanity",
   "license": "ISC",
   "dependencies": {
+    "@fleekhq/fleek-storage-js": "^1.0.20",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.28.1",
