--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.13.9",
+    "mongoose-paginate-v2": "^1.6.3",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.3",
     "node-cron": "^3.0.0",
