feat: Install migrate-mongo, create migration and replace Order fields.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "migrate-mongo"
   },
   "keywords": [],
   "author": "Proof Of Humanity",
@@ -33,5 +34,8 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "migrate-mongo": "^9.0.0"
   }
 }
