--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.20",
+    "amqplib": "^0.10.0",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.28.1",
