--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.20",
+    "@google-cloud/storage": "^6.4.1",
     "amqplib": "^0.10.0",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
@@ -34,6 +35,7 @@
     "nodemon": "^2.0.12",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
+    "webp-converter": "^2.3.3",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
