--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.12",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
+    "siwe": "^1.1.6",
     "webp-converter": "^2.3.3",
     "xml2js": "^0.4.23"
   },
