--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "ethers": "^5.7.2",
     "express": "^4.17.1",
     "got": "^11.8.2",
     "jsonwebtoken": "^8.5.1",
@@ -36,6 +35,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "siwe": "^1.1.6",
+    "web3": "^1.8.2",
     "webp-converter": "^2.3.3",
     "xml2js": "^0.4.23"
   },
