--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "siwe": "^1.1.6",
+    "telegraf": "^4.12.2",
     "webp-converter": "^2.3.3",
     "xml2js": "^0.4.23"
   },
