Add winston loggers

--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "backend",
-  "version": "0.6.0",
+  "version": "0.8.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "migrate-mongo"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "Proof Of Humanity",
@@ -15,13 +13,11 @@
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.20",
     "@google-cloud/storage": "^6.4.1",
-    "amqplib": "^0.10.0",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "ethers": "^5.7.2",
+    "ethers": "^5.5.1",
     "express": "^4.17.1",
     "got": "^11.8.2",
     "jsonwebtoken": "^8.5.1",
@@ -38,9 +34,6 @@
     "siwe": "^1.1.6",
     "telegraf": "^4.12.2",
     "webp-converter": "^2.3.3",
-    "xml2js": "^0.4.23"
-  },
-  "devDependencies": {
-    "migrate-mongo": "^9.0.0"
+    "winston": "^3.8.2"
   }
 }
