--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@fleekhq/fleek-storage-js": "^1.0.20",
     "@google-cloud/storage": "^6.4.1",
     "@kleros/file-to-ipfs": "^0.3.2",
+    "@metamask/eth-sig-util": "^5.0.2",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eth-sig-util": "^3.0.1",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.5.1",
     "express": "^4.17.1",
     "got": "^11.8.2",
+    "i": "^0.3.7",
     "ipfs-core": "^0.18.0",
     "ipfs-http-client": "^56.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +36,7 @@
     "newrelic": "^8.14.1",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.12",
+    "npm": "^9.6.4",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "pdfkit": "^0.13.0",
