--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^6.4.1",
     "@kleros/file-to-ipfs": "^0.3.2",
     "@metamask/eth-sig-util": "^5.0.2",
+    "@pushprotocol/restapi": "^1.2.7",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
