--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^10.0.0",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^5.5.1",
+    "ethers": "^5.7.2",
     "express": "^4.17.1",
     "got": "^11.8.2",
     "graphql-request": "^6.0.0",
@@ -30,6 +30,7 @@
     "ipfs-core": "^0.18.0",
     "ipfs-http-client": "^56.0.2",
     "jsonwebtoken": "^8.5.1",
+    "keccak": "^3.0.3",
     "moment": "^2.29.1",
     "mongoose": "^5.13.9",
     "mongoose-paginate-v2": "^1.6.3",
@@ -42,7 +43,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "pdfkit": "^0.13.0",
-    "siwe": "^1.1.6",
+    "siwe": "^2.1.4",
     "telegraf": "^4.12.2",
     "webp-converter": "^2.3.3",
     "winston": "^3.8.2"
